# appveyor-test

./: .appveyor.yml  README.md  appveyor-test.cabal  stack.yaml
src/: Main.hs
